# CubeEngine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CubeEngine.sln  CubeEngine.vcxproj  LICENSE  README.md
Resources/Models/: CMakeLists.txt  FetchDefaultModels.bat  FetchDefaultModels.ps1  FetchDefaultModels.sh  FetchglTFSampleAssets.bat  FetchglTFSampleAssets.sh
Source/Base/: CMakeLists.txt
Source/Base/Private/: CubeFormat.cpp  CubeString.cpp
Source/Base/Public/: Allocator.h  Async.h  Blob.h  CubeMath.h  CubeString.h  Defines.h  Event.h  Flags.h  Format.h  KeyCode.h  Matrix.h  MatrixUtility.h  Mouse.h  Types.h  Vector.h
Source/Base/Public/MacOS/: MacOSDefines.h
Source/Base/Public/MatrixImpl/: MatrixAVX2.inl  MatrixArray.inl  MatrixNEON.inl  MatrixSSE.inl  MatrixUtilityAVX2.inl  MatrixUtilityArray.inl  MatrixUtilityNEON.inl  MatrixUtilitySSE.inl
Source/Base/Public/VectorImpl/: VectorAVX2.inl  VectorArray.inl  VectorNEON.inl  VectorSSE.inl
Source/Base/Public/Windows/: WindowsDefines.h
Source/Core/: Assertion.h  CMakeLists.txt  Core.cpp  Core.h  Core.vcxproj  Core.vcxproj.filters  CoreFd.h  CoreFwd.h  CoreHeader.h  GameThread.cpp  GameThread.h  Handler.h
Source/Core/Allocator/: FrameAllocator.cpp  FrameAllocator.h
Source/Core/Module/: ModuleManager.cpp  ModuleManager.h
Source/Core/Private/: Camera.cpp  Camera.h  Engine.cpp  PathHelper.cpp
Source/Core/Private/Allocator/: FrameAllocator.cpp
Source/Core/Private/Renderer/: BaseMeshGenerator.cpp  BaseMeshGenerator.h  EnvironmentMapping.cpp  EnvironmentMapping.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshHelper.cpp  MeshHelper.h  Pipeline.cpp  Pipeline.h  PipelineManager.cpp  PipelineManager.h  RenderGraph.cpp  RenderGraph.h  RenderObject.cpp  RenderObject.h  RenderProfiling.cpp  RenderProfiling.h  RenderUtils.cpp  RenderUtils.h  Renderer.cpp  Renderer.h  SamplerManager.cpp  SamplerManager.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderParameter.cpp  ShaderParameter.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  TextureViewer.cpp  TextureViewer.h  Tonemap.cpp  Tonemap.h
Source/Core/Private/Scene/: Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
Source/Core/Private/Systems/: CameraSystem.cpp  CameraSystem.h  ModelLoaderSubsystem_glTF.cpp  ModelLoaderSubsystem_glTF.h  ModelLoaderSubsystem_obj.cpp  ModelLoaderSubsystem_obj.h  ModelLoaderSystem.cpp  ModelLoaderSystem.h  StatsSystem.cpp  StatsSystem.h
Source/Core/Public/: CoreHeader.h  Engine.h  PathHelper.h
Source/Core/Public/Allocator/: AllocatorUtility.h  FrameAllocator.h
Source/Core/Public/Renderer/: RenderGraphTypes.h  RenderTypes.h  ShaderParameter.h
Source/Core/Renderer/: Material.h  Mesh.cpp  Mesh.h  RenderObject.h  RenderableComponent.h  RendererManager.cpp  RendererManager.h  RenderingThread.cpp  RenderingThread.h  Texture.cpp  Texture.h
Source/Core/Resource/: Resource.h  ResourceManager.cpp  ResourceManager.h
Source/Core/Time/: GameTime.cpp  TimeManager.cpp  TimeManager.h
Source/Core/World/: World.cpp  World.h  WorldObject.cpp  WorldObject.h
Source/GraphicsAPI/: CMakeLists.txt
Source/GraphicsAPI/GAPI/: CMakeLists.txt
Source/GraphicsAPI/GAPI/Private/: GAPI_Resource.cpp
Source/GraphicsAPI/GAPI/Public/: GAPI.h  GAPIHeader.h  GAPITypes.h  GAPI_Buffer.h  GAPI_CommandList.h  GAPI_Fence.h  GAPI_Pipeline.h  GAPI_Resource.h  GAPI_Sampler.h  GAPI_Shader.h  GAPI_ShaderParameter.h  GAPI_ShaderReflection.h  GAPI_ShaderVariable.h  GAPI_SwapChain.h  GAPI_Texture.h  GAPI_Timestamp.h  GAPI_Viewport.h
Source/GraphicsAPI/GAPI_Base/: CMakeLists.txt
Source/GraphicsAPI/GAPI_Base/Private/: SlangHelper.cpp
Source/GraphicsAPI/GAPI_Base/Public/: GAPI_BaseHeader.h  ShaderParameterReflection.h  SlangHelper.h
Source/GraphicsAPI/GAPI_DX12/: CMakeLists.txt
Source/GraphicsAPI/GAPI_DX12/Private/: DX12CommandListManager.cpp  DX12CommandListManager.h  DX12Debug.cpp  DX12Debug.h  DX12DescriptorManager.cpp  DX12DescriptorManager.h  DX12Device.cpp  DX12Device.h  DX12Fence.cpp  DX12Fence.h  DX12MemoryAllocator.cpp  DX12MemoryAllocator.h  DX12QueryManager.cpp  DX12QueryManager.h  DX12QueueManager.cpp  DX12ShaderCompiler.cpp  DX12ShaderCompiler.h  DX12Types.cpp  DX12Types.h  DX12UploadManager.cpp  DX12UploadManager.h  DX12Utility.h  Dx12QueueManager.h  GAPI_DX12.cpp  GAPI_DX12Buffer.cpp  GAPI_DX12CommandList.cpp  GAPI_DX12Fence.cpp  GAPI_DX12Pipeline.cpp  GAPI_DX12Resource.cpp  GAPI_DX12Sampler.cpp  GAPI_DX12Shader.cpp  GAPI_DX12ShaderParameter.cpp  GAPI_DX12ShaderVariable.cpp  GAPI_DX12SwapChain.cpp  GAPI_DX12Texture.cpp  GAPI_DX12Viewport.cpp
Source/GraphicsAPI/GAPI_DX12/Public/: DX12APIObject.h  DX12Header.h  GAPI_DX12.h  GAPI_DX12Buffer.h  GAPI_DX12CommandList.h  GAPI_DX12Fence.h  GAPI_DX12Pipeline.h  GAPI_DX12Resource.h  GAPI_DX12Sampler.h  GAPI_DX12Shader.h  GAPI_DX12ShaderParameter.h  GAPI_DX12ShaderVariable.h  GAPI_DX12SwapChain.h  GAPI_DX12Texture.h  GAPI_DX12Viewport.h
Source/GraphicsAPI/GAPI_Metal/: CMakeLists.txt
Source/GraphicsAPI/GAPI_Metal/Private/: GAPI_Metal.cpp  GAPI_Metal.mm  GAPI_MetalBuffer.mm  GAPI_MetalCommandList.mm  GAPI_MetalPipeline.mm  GAPI_MetalSampler.mm  GAPI_MetalShader.mm  GAPI_MetalShaderParameter.mm  GAPI_MetalSwapChain.mm  GAPI_MetalTexture.mm  GAPI_MetalViewport.mm  MetalArgumentBufferManager.h  MetalArgumentBufferManager.mm  MetalDevice.h  MetalDevice.mm  MetalShaderCompiler.h  MetalShaderCompiler.mm  MetalTimestampManager.h  MetalTimestampManager.mm  MetalTransientHeap.h  MetalTransientHeap.mm  MetalTransientHeapManager.h  MetalTransientHeapManager.mm  MetalTypes.h  MetalTypes.mm  test  (+3 more)
Source/Logger/: CMakeLists.txt
Source/Logger/Private/: Checker.cpp  Logger.cpp
Source/Logger/Public/: Checker.h  Logger.h  LoggerHeader.h
Source/Main/: CMakeLists.txt  Main.vcxproj  main.cpp
Source/Main/Private/: Engine.cpp
Source/Main/Public/: Engine.h
Source/Platform/: CMakeLists.txt  Platform.vcxproj  Platform.vcxproj.filters
Source/Platform/Public/: DLib.h  FileSystem.h  Platform.h  PlatformDebug.h  PlatformDefines.h  PlatformHeader.h
(+169 files in other folders)
